'httpd.ini' ändern

--- a/httpd.ini
+++ b/httpd.ini
@@ -1,5 +1,6 @@
 [program:httpd]
-command=/usr/sbin/apache2ctl -DFOREGROUND
+#command=/usr/sbin/apache2ctl -DFOREGROUND
+command=APACHE_RUN_DIR=/root APACHE_RUN_USER=nobody APACHE_RUN_GROUP=nogroup APACHE_LOG_DIR=/var/log/apache2/ apache2 -DFOREGROUND
 autostart=true
 autorestart=true
 priority=5
