--- a/httpd.ini
+++ b/httpd.ini
@@ -1,6 +1,6 @@
 [program:httpd]
 #command=/usr/sbin/apache2ctl -DFOREGROUND
-command=APACHE_RUN_DIR=/root APACHE_RUN_USER=nobody APACHE_RUN_GROUP=nogroup APACHE_LOG_DIR=/var/log/apache2/ apache2 -DFOREGROUND
+command=APACHE_RUN_DIR=/var/www/html APACHE_RUN_USER=www-data APACHE_RUN_GROUP=www-data APACHE_LOG_DIR=/var/log/apache2/ apache2 -DFOREGROUND -f /etc/ache2/apache2.conf
 autostart=true
 autorestart=true
 priority=5
