'httpd.ini' ändern

--- a/httpd.ini
+++ b/httpd.ini
@@ -1,6 +1,7 @@
 [program:httpd]
 #command=/usr/sbin/apache2ctl -DFOREGROUND
-command=APACHE_RUN_DIR=/var/www/html APACHE_RUN_USER=www-data APACHE_RUN_GROUP=www-data APACHE_LOG_DIR=/var/log/apache2/ apache2 -DFOREGROUND -f /etc/ache2/apache2.conf
+environment=APACHE_RUN_DIR="/var/www/html",APACHE_RUN_USER="www-data",APACHE_RUN_GROUP="www-data",APACHE_LOG_DIR="/var/log/apache2/"
+command=apache2 -DFOREGROUND -f /etc/ache2/apache2.conf
 autostart=true
 autorestart=true
 priority=5
