--- a/httpd.ini
+++ b/httpd.ini
@@ -1,6 +1,6 @@
 [program:httpd]
 #command=/usr/sbin/apache2ctl -DFOREGROUND
-environment=APACHE_RUN_DIR="/var/www/html",APACHE_RUN_USER="www-data",APACHE_RUN_GROUP="www-data",APACHE_LOG_DIR="/var/log/apache2/"
+environment=APACHE_RUN_DIR="/var/www/html",APACHE_RUN_USER="nagios",APACHE_RUN_GROUP="nagios",APACHE_LOG_DIR="/var/log/apache2/"
 command=apache2 -DFOREGROUND -f /etc/apache2/apache2.conf
 autostart=true
 autorestart=true
