Updated to Alpine

--- a/nginx.ini
+++ b/nginx.ini
@@ -1,9 +1,8 @@
-[program:nagios4]
-command=/opt/nagios/bin/nagios /opt/nagios/etc/nagios.cfg
-user=nagios
+[program:nginx]
+command=/usr/sbin/nginx -g 'daemon off;'
 autostart=true
 autorestart=true
-priority=4
+priority=6
 stdout_events_enabled=true
 stderr_events_enabled=true
 stdout_logfile_maxbytes=0
