Working with all addons

--- a/nginx.conf
+++ b/nginx.conf
@@ -26,11 +26,30 @@ http {
 
 	server {
           listen 80 default_server;
-          autoindex on;
+          #autoindex on;
 
+          location /pnp4nagios {
+            alias /usr/local/pnp4nagios/share;
+            index index.php;
+
+            if ( $uri !~ /pnp4nagios/index.php(.*)) {
+              rewrite ^/pnp4nagios/(.*)$ /pnp4nagios/index.php/$1;
+            }
+
+            fastcgi_pass 127.0.0.1:9000;
+            include         fastcgi_params;
+            # this splits out the trailing path
+            # eg index.php?host -> $fastcgi_path_info == 'host'
+            fastcgi_split_path_info ^(.+\.php)(.*)$;
+            fastcgi_param PATH_INFO $fastcgi_path_info;
+            fastcgi_param SCRIPT_FILENAME /usr/local/pnp4nagios/share/index.php;
+          }
+          location /pnp4nagios/media {
+            alias /usr/local/pnp4nagios/share/media;
+	  }
 
           location /nagios {
-            alias /opt/nagios/share/;
+            alias /opt/nagios/share;
 
             location /nagios/cgi-bin {
               alias /opt/nagios/sbin;
@@ -47,11 +66,10 @@ http {
 
 
           location /nagios4 {
-            alias /opt/nagios/share/;
+            alias /opt/nagios/share;
             index index.php;
 
             location ~ \.php$ {
-              #fastcgi_pass unix:/run/php/php7.0-fpm.sock;
               fastcgi_pass 127.0.0.1:9000;
               include         fastcgi_params;
               fastcgi_index index.php;
