--- a/php-fpm.ini
+++ b/php-fpm.ini
@@ -1,5 +1,5 @@
 [program:php-fpm]
-command=/usr/sbin/php-fpm7 -F -c /etc/php7/php.ini
+command=/usr/sbin/php-fpm7 -F
 autostart=true
 autorestart=true
 priority=5
