PHP-FPM on socket

--- a/nginx.conf
+++ b/nginx.conf
@@ -36,7 +36,7 @@ http {
               rewrite ^/pnp4nagios/(.*)$ /pnp4nagios/index.php/$1;
             }
 
-            fastcgi_pass 127.0.0.1:9000;
+            fastcgi_pass unix:/run/php/php-fpm.sock;
             include         fastcgi_params;
             # this splits out the trailing path
             # eg index.php?host -> $fastcgi_path_info == 'host'
@@ -70,7 +70,7 @@ http {
             index index.php;
 
             location ~ \.php$ {
-              fastcgi_pass 127.0.0.1:9000;
+              fastcgi_pass unix:/run/php/php-fpm.sock;
               include         fastcgi_params;
               fastcgi_index index.php;
               fastcgi_param   SCRIPT_FILENAME    $request_filename;
